ApiServer unit tests in progress, modified HomeController and updated openapi.yaml
