# Server/ApiServer/Api/Common/Models/ApiVersion.cs
@@ -1,0 +1,13 @@
+namespace ApiServer.Api.Common.Models;
+
+/// <summary>
+/// API Version model
+/// </summary>
+public class ApiVersion
+{
+    /// <summary>
+    /// Version number of TestVar API
+    /// </summary>
+    public string? Version { get; set; }
+
+}
